feat: 新增清除已完成任務功能
- 在過濾器區域新增「清除已完成」按鈕
- 實作 clearCompleted() 方法，可一次清除所有已完成任務
- 加入確認對話框避免誤刪
- 新增 btn-danger 樣式類別
- 當沒有已完成任務時顯示提示訊息

Fixes #1

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <button class="filter-btn active" data-filter="all">全部</button>
             <button class="filter-btn" data-filter="active">未完成</button>
             <button class="filter-btn" data-filter="completed">已完成</button>
+            <button id="clearCompleted" class="btn btn-danger">清除已完成</button>
         </div>
 
         <div class="todo-stats">
